integ-tests/tests/snapshots/parser__require_newlines__basic3.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ basic3:1:3
  │
1 │ 0=0r0=0r=falsefal=false
  │   ^^^ unable to parse number


